feat(model): add layout foundation and modernize project baseline